# surface-evolver

./: .dockerignore  .gitignore  API_SPEC.md  BACKLOG.md  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  conftest.py  docker-compose-vnc.yml  docker-compose.dev.yml  docker-compose.yml  dockerfile  dockerfile.vnc  electrobun.config.ts  package.json  skills-lock.json  system-design.md  ~$port#6 User Manual.docx
.agents/: AGENTS.md
.agents/skills/bun-ffi-c-binding/: README.md  SKILL.md
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  docs.yml
app/backend-bun/: package.json
app/backend-bun/src/: config.ts  job-runner.ts  se-manager.ts  se-worker.ts  server.ts  session-store.ts  ws-hub.ts
app/bindings/c/: se_api.c
app/frontend/: package.json  tailwind.config.js  vite.config.ts
app/frontend/src/: App.tsx  main.tsx
app/src/: Makefile  README.md  storage.h
app/src/core/: help.c  tmain.c  userfunc.c  variable.c
app/src/graphics/: filgraph.c  nulgraph.c  softimag.c
app/src/surface/: curtest.c  iterate.c  metis.c  model.c  trirevis.c  veravg.c  verpopst.c
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/core/: se_manager.py  se_worker.py  session_store.py
backend/app/models/: job.py  mesh.py  session.py  simulation.py
backend/app/routers/: files.py  jobs.py  sessions.py  simulation.py
backend/app/ws/: progress.py
backup/: EvolverDoc.html  README.unix.txt  dockerfile
backup/doc/: biblio.htm  commands.htm  datafile.htm  default.html  energies.htm  evolver.htm  graphics.htm  index.htm  install.htm  intro.htm  iterate.htm  mpi_evolver.htm  news_03.htm  news_05.htm  news_06.htm  news_07.htm  news_12.htm  news_19.htm  news_21.htm  news_22.htm  nnn.htm  profiling.htm  ringblob.htm  scripts.htm  toggle.htm  tutorial.htm
backup/fe/: 3ds.cmd  adjoint.cmd  adjointc.cmd  ansys.cmd  band.cmd  cmccousin.cmd  coff.cmd  collada.cmd  detorus_capper.cmd  dirichlet_to_disk.cmd  embox.cmd  fourier.cmd  gaussmap.cmd  iges136.cmd  intersec.cmd  intersect.cmd  jvx.cmd  maya.cmd  multiplicate.cmd  neville.cmd  obj.cmd  off.cmd  off_show.cmd  offn.cmd  orderdmp.cmd  percolate.cmd  polyfilm.cmd  quadint2.cmd  quadmeet.cmd  quadtbox.cmd  rib.cmd  save_view.cmd  slice2.cmd  stl.cmd  strdup.cmd  unseam.cmd  vrml.cmd  wetfoam2.cmd
backup/src/: Makefile  command.c  dump.c  evaltree.c  glutgraph.c  grapher.c  include.h  mindeg.c  pixgraph.c  tmain.c  userio.c
bindings/c/: se_api.c  se_api.h
bindings/python/: se.py
doc/: addload_example.fe  catenoid.htm  column.htm  constrnt.htm  cube.htm  debugging.htm  eigentut.htm  elements.htm  evhelp.txt  general.htm  hints.htm  misc.htm  model.htm  mound.htm  news_01.htm  news_02.htm  news_04.htm  news_08.htm  news_09.htm  news_10.htm  news_11.htm  news_13.htm  news_14.htm  news_15.htm  news_16.htm  news_17.htm  news_18.htm  news_20.htm  quants.htm  single.htm  syntax.htm  twointor.htm
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docker/backend/: Dockerfile
docker/backend-bun/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf.template
engine/bindings/c/: se_api.c  se_api.h
engine/src/: alloca.c  evalmore.c  extern.h  include.h  nulgraph.c  storage.c  tmain.c  xgraph.c
engine/src/core/: check.c  eval_all.c  eval_sec.c  evaltree.c  lexinit.c  modify.c  utility.c
engine/src/graphics/: display.c  glutgraph.c  grapher.c
engine/src/surface/: bk.c  hessian.c  skeleton.c
engine/tools/: callgraph.py
fe/: EvolverOBJcolors.mtl  README-cmd.txt  addload_example.fe  ansurf.cmd  bonnet_movie.cmd  compdump.cmd  complex.cmd  cube.fe.dmp  cube_views.cmd  cut.cmd  dxf.cmd  dxf_thick.cmd  edge_tuber.cmd  equi.cmd  foamface.cmd  foamface_jvx.cmd  gaussequi.cmd  gaussref.cmd  gzipdump.cmd  iges.cmd  iges114.cmd  iges128.cmd  iges144.cmd  maya1.cmd  order.cmd  orderlis.cmd  ply.cmd  povray.cmd  povrays.cmd  quadbbox.cmd  reorder.cmd  rewrap.cmd  rewrap2.cmd  rgb.cmd  rotate.cmd  saveview.cmd  show_equi.cmd  simply_connected.cmd  slice.cmd  slicer.cmd  (+9 more)
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.js
frontend/public/docs/: biblio.html  catenoid.html  column.html  commands.html  constrnt.html  cube.html  datafile.html  debugging.html  default.html  eigentut.html  elements.html  energies.html  evdoc-style.css  evolver.html  general.html  graphics.html  hints.html  index.html  install.html  intro.html  iterate.html  misc.html  model.html  mound.html  mpi_evolver.html  news_01.html  news_02.html  news_03.html  news_04.html  news_05.html  news_06.html  news_07.html  news_08.html  news_09.html  news_10.html  news_11.html  news_12.html  news_13.html  news_14.html  news_15.html  (+17 more)
frontend/src/: App.tsx  main.tsx  theme.ts
guide/: MODULARIZATION.md  X11DOCKER.md
scripts/: build-native.ts  make-icons.ts  tauri-before.ts
src/: Makefile  evolver  extern.h  include.h  proto.h  skeleton.h  web.h
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs  rpc.rs  worker.rs
src/core/: alloca.c  command.c  dump.c  eval_all.c  eval_sec.c  evalmore.c  help.c  lexinit.c  lexinit2.c  modify.c  quantity.c  userio.c  yexparse.c
src/graphics/: display.c  geomgraph.c  graphgen.c  oglgraph.c  painter.c  xgraph.c
src/main/: package.json  tsconfig.json
src/surface/: calcforc.c  fixvol.c  hessian.c  iterate.c  mindeg.c  storage.c  symmetry.c  trirevis.c
src/views/: package.json  tailwind.config.js  vite.config.ts
tests/: CMakeLists.txt
tests/c/: test_se_api.c
tests/python/: conftest.py  requirements.txt  test_backend_api.py  test_se_api.py
ui/: index.html  package.json  tailwind.config.js
ui/src/: App.tsx
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
worker/: se-worker.ts
(+115 files in other folders)
